[B][COLOR gold]v4.03.00-1[/COLOR][/B]
- Cosmetic updates
- Default trailer search method changed to IMDb, as it doesn't require the
  YouTube add-on (and all the burden it carries). One drawback is that it
  doesn't supply season/episode specific related videos

[B][COLOR gold]v4.02.05[/COLOR][/B]
- Added yet another trailer/related videos source to choose: IMDb
  This source does not require the YouTube add-on to work

[B][COLOR gold]v4.02.04[/COLOR][/B]
- Fixed clearing movies saved search terms through search menu clearing out
  tvshows' too (and vice-versa). Action through tools menu still clears all.
- Other minor fixes

[B][COLOR gold]v4.02.03[/COLOR][/B]
- Internal changes to hopefully make things a bit faster
- TV calendar/New episodes loading fix and caching fix
- Minor compatibility adjustment for... spmc (lol)

[B][COLOR gold]v4.02.02[/COLOR][/B]
- Added biography info on 'Cast' context menu action

[B][COLOR gold]v4.02.01[/COLOR][/B]
- Channels fix
- Fixed some issues with Trakt (hopefully)

[B][COLOR gold]v4.02.00[/COLOR][/B]
- Added new "Cast" context menu item, which can list
  all the movies & shows an actor has appeared in
- Fixed issue with "Play random"
- Altered "Find similar" context menu's source from Trakt to TMDb
- Updated debrid hosts list
- Fixed some issues with caching on py3

[B][COLOR gold]v4.01.11[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v4.01.10[/COLOR][/B]
- Fixed TMDb trailers listed twice
- Tweaked YouTube trailers search query

[B][COLOR gold]v4.01.07-9[/COLOR][/B]
- Trailers:
    Added new trailer searching method through TMDb.
    This method does not require a YouTube API key to be set.
    Can be enabled as default trailer search method in settings,
    but add-on will also fallback to it if YouTube method fails.
- Channels category fixes/enhancements - thx JewBMX for the help

[B][COLOR gold]v4.01.06[/COLOR][/B]
- Logging tweaks
- Indexers tweaks

[B][COLOR gold]v4.01.05[/COLOR][/B]